#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(sierpinski)
#add_subdirectory(tictactoe)
#add_subdirectory(coloredtriangles)
#add_subdirectory(regularpolygons)
#add_subdirectory(asteroids)
#add_subdirectory(apertaX)
#add_subdirectory(JogoMaiorMenor)
#add_subdirectory(loadmodel)
#add_subdirectory(lookat)
#add_subdirectory(lookat2)
#add_subdirectory(Dino3D)
#add_subdirectory(starfield)
#add_subdirectory(viewer1)
#add_subdirectory(viewer2)
#add_subdirectory(viewer3)
#add_subdirectory(viewer4)
#add_subdirectory(viewer5)
#add_subdirectory(viewer6)
#add_subdirectory(ProjetoFinal)
add_subdirectory(ProjetoFinal_v2)